overflow bug with navmenu

--- a/styles.css
+++ b/styles.css
@@ -107,12 +107,21 @@ ul {
 @media screen and (max-width: 600px) {
     #navbar {
         width: 100%;
-        height: 200px;
-        position: relative;
+        height: 180px;
+        top: 0;
+        left: 0;
+        position: fixed;
         padding-bottom: 20px;
+        z-index: 99999999;
     }
     #main-doc {
-        margin-left: 10px;
-        margin-top: 10px;
+        position: relative;
+        bottom: 0;
+        overflow-y: auto;
+        overflow-x: auto;
+        margin: 240px auto 20px auto;
+        width: 100%;
+        max-height: 500px;
+        min-height: 370px;
     }
 }
